--- a/front-end-server/index.html
+++ b/front-end-server/index.html
@@ -6,20 +6,23 @@
     <link rel='stylesheet' href='styles.css'/>
   </head>
   <body>
+    <script src="./index,js" defer></script>
     <div class='page'>
       <div class='shopTitle'><h1 class="scottShop">Scott's Autoshop</h1></div>
         <div class='titleHeader'>
           <div class="navbar">
             <div class="menu">
               <div class='column'><button class="btn" id="serviceBtn">Click</button><p>Services</p></div>
-              <div class='column'><button class="btn" id="serviceBtn">Click</button><p>Technicians</p></div>
-              <div class='column'><button class="btn" id="serviceBtn">Click</button><p>Customers</p></div>
+              <div class='column'><button class="btn" id="vehBtn">Click</button><p>Vehicles In Service</p></div>
             </div>
           </div>
         </div>
         
       <div class='sidebar'>Sidebar</div>
-      <div class='content'>Content</div>
+      <div class='content'><h5>We offer quality auto repairs in all areas, backed by years of experience!</h5>
+        <div class='column'><button class="btn" id="custBtn">Click</button><h5>Leave a comment:</h5><input id="customerInput" 
+          type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"></div>
+      </div>
       <div class='footer'>Footer</div>
     </div>
   </body>
