--- a/front-end-server/index.html
+++ b/front-end-server/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Autoshop</title>
-  <link rel='stylesheet' href='styles.css'/>
+  <link rel='stylesheet' href='./styles.css'/>
   </head>
   <body>
 
@@ -53,7 +53,17 @@
             </div>
             <div class='contentRow3'></div>
           </div>
-          <div class='contentColumn2'></div>
+          <div class='contentColumn2'>
+            <div class="inputContainer">
+              <form id="customerInputForm">
+                <input id="name">
+                <input id="name">
+                <input id="name">
+                <input id="name">
+                <button type="submit" id="submit">Submit</button>
+              </form>
+            </div>
+          </div>
           <div class='contentColumn3'></div>
 
       </div>
