--- a/front-end-server/index.html
+++ b/front-end-server/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-    <script src="./index,js" defer></script>
+    <script src="./index.js" defer></script>
     <div class='page'>
 
       <div class="section1" id="PageTitleHeaderMenu">
