--- a/front-end-server/index.html
+++ b/front-end-server/index.html
@@ -15,8 +15,8 @@
       <div class="section1" id="PageTitleHeaderMenu">
         <div class="sectionOneColumn">
           <div class="menu">
-            <div class='menuItem'><button class="menuBtn" id="serviceBtn">Click</button><p>Services</p></div>
-            <div class='menuItem'><button class="menuBtn" id="vehBtn">Click</button><p>Vehicles In Service</p></div>
+            <div class='menuItem'><button class="menuBtn" id="serviceBtn">Click</button><p>Vehicles in Service</p></div>
+            <div class='menuItem'><button class="menuBtn" id="vehBtn">Click</button><p>Vehicles for sale</p></div>
           </div>
         </div>
         <div class="sectionOneColumn">
@@ -36,7 +36,18 @@
 
       <div class="section2" id="sidebarDisplayArea">
         <div class='sidebar'>Sidebar</div>
-        <div class='displayArea' id="displayArea"></div>
+        <div class='displayArea' id="displayArea">
+          <div class="div">
+            <h2 id="displayScottAuto">We are</h2>
+            <h2>...an independently owned and operated business by caring community members.</h2>
+            <p>We specialize in general automotive repair for most vehicles, including foreign/domestic vehicles, transmissions, brakes, tires and alignments.</p>
+            <div class="p"></div>
+            <h4>ScottsAuto.sometingOrOther</h4>
+            <p>Address: 2250 B St, Colorado Springs, CO 80906
+            Cross Streets: Near the intersection of B St and Venetucci Blvd
+            Phone: (719) XXX-XXXX</p>
+          </div>
+        </div>
       </div>
 
 
