--- a/front-end-server/index.html
+++ b/front-end-server/index.html
@@ -13,22 +13,22 @@
     <div class='page'>
 
       <div class="section1" id="PageTitleHeaderMenu">
-        <div class="sectionOneColumn">
+        <div class="contactColumn" id="menuNavColumn">
           <div class="menu">
             <div class='menuItem'><button class="menuBtn" id="serviceBtn">Click</button><p>Vehicles in Service</p></div>
-            <div class='menuItem'><button class="menuBtn" id="vehBtn">Click</button><p>Vehicles for sale</p></div>
+            <div class='menuItem'><button class="menuBtn" id="vehBtn">Click</button><p>Customer List Update</p></div>
           </div>
         </div>
-        <div class="sectionOneColumn">
+        <div class="contactColumn" id="contactColumn">
           <div class="contactInfo" color="white"><p class="contactPara"><h3>Contact Us:</h3></p>
             <p class="contactPara" color="white">Phone Number: (719) 271-xxxx</p><p class="contactPara"></p>
             <p class="contactPara" color="white">Email: fake email</p><p class="contactPara"></p>
           </div>
         </div>
-        <div class="sectionOneColumn">
+        <div class="contactColumn" id="leftLogoColumn">
           <img src="./logo1.jpg" class="img1" alt="Responsive image">
         </div>
-        <div class="sectionOneColumn">
+        <div class="contactColumn" id="rightLogoColumn">
           <img src="./logo.jpg" class="img2" alt="Responsive image">
         </div>
       </div>
@@ -47,6 +47,9 @@
             Cross Streets: Near the intersection of B St and Venetucci Blvd
             Phone: (719) XXX-XXXX</p>
           </div>
+          <row class="row"><img src="./work1.jpg" width="45%" id="work1"/></row>
+
+          <row class="rowNow" ><img src="./work2.jpg"  width="90%" id="work2"/></row>
         </div>
       </div>
 
@@ -56,10 +59,10 @@
 
           <div class='contentColumn1'>
             <div class='contentRow1'>
-              <h2 class="outputHeader">Review</h2>
+              <h2 class="outputHeader">Customer Review</h2>
             </div>
             <div class='contentRow2'>
-              <div id="customerInput" class="outputBox"></div>
+              <div id="customerInput" class="outputBox">Display customer informaton in this box, by clicking the button to the right of the 'Customer List Update' above, in the menu bar.</div>
             </div>
             <div class='contentRow3'></div>
           </div>
